<resources>
    <string name="app_name">Futsal Ursus</string>
    <string name="action_settings">Settings</string>

    <string name="login_welcome">Załóż grupę lub dołącz do istniejącej</string>
    <string name="group_choice_welcome">Wybierz grupę</string>
    <string name="user_registration_welcome">Zapisz się do grupy</string>
    <string name="group_registration_welcome">Utwórz grupę</string>
    <string name="main_page_match">najbliższy mecz:</string>
    <string name="main_page_training">najbliższy trening:</string>
    <string name="main_page_training_players_title">obecność na treningu</string>
    <string name="main_page_match_players_title">obecność na meczu</string>
    <string name="save">zapisz</string>
    <string name="saved">zapisano</string>
    <string name="login">zaloguj</string>
    <string name="logout">wyloguj</string>
    <string name="register">dołącz</string>
    <string name="first_name_placeholder">imię</string>
    <string name="second_name_placeholder">nazwisko</string>
    <string name="phone_placeholder">telefon</string>
    <string name="field_required">Pole wymagane!</string>
    <string name="login_successful_text">Zalogowano</string>
    <string name="login_unsuccessful_text">Niepoprawny login lub hasło</string>
    <string name="email_does_not_exist">Podany adres e-mail nie istnieje</string>
    <string name="email_already_in_database">podany adres e-mail jest już zarejestrowany</string>
    <string name="group_does_not_exist">Nie można zarejestrować do grupy</string>
    <string name="register_unsuccessful_text">Niepoprawny login lub hasło</string>
    <string name="server_error">Błąd serwera, spróbuj później</string>
    <string name="token_expired">Twoja sesja wygasła!</string>
    <string name="user_registration"><u>Zarejestruj jako członek grupy</u></string>
    <string name="device_registration"><u>Dołącz do grupy bez rejestracji</u></string>
    <string name="group_registration"><u>Zarejestruj jako administrator grupy</u></string>
    <string name="email_placeholder">adres e-mail</string>
    <string name="password_placeholder">hasło</string>
    <string name="password_confirm_placeholder">powtórz hasło</string>
    <string name="group_name_placeholder">nazwa grupy</string>
    <string name="main_page_imagebutton_present_description">Obecny</string>
    <string name="main_page_imagebutton_lastminute_description">Dam znać do 3 godzin przed treningiem</string>
    <string name="main_page_imagebutton_absent_description">Nieobecny</string>
    <string name="forward">Dalej</string>
    <string name="zero">0</string>
    <string name="participant_number_title">l. p.</string>
    <string name="participant_name_title">zawodnik</string>
    <string name="training_cancelled">Trening odwołany!</string>
    <string name="too_few_participants">Brak zawodników</string>
    <string name="not_called_up">Brak powołania</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
