<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".fragments.LoginFragment">

    <TextView
            android:id="@+id/login_welcome"
            android:text="@string/login_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />
    <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"/>
    <EditText android:id="@+id/login_username"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
              android:hint="@string/email_placeholder"
    />
    <EditText android:id="@+id/login_password"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
        android:inputType="textPassword"
              android:hint="@string/password_placeholder"
    />

    <Button android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
    />

    <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"/>


    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/device_registration"
    />

    <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"/>


    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/user_registration"
    />

    <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/group_registration"
    />

</LinearLayout>