<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.LoginFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_logo_black" />

    <EditText
        android:id="@+id/register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/email_placeholder"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@+id/register_password"
        android:nextFocusRight="@+id/register_password"
        android:nextFocusForward="@+id/register_password"
        android:textSize="21sp" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/password_placeholder"
        android:inputType="textPassword"
        android:nextFocusDown="@+id/register_confirm_password"
        android:nextFocusRight="@+id/register_confirm_password"
        android:nextFocusForward="@+id/register_confirm_password"
        android:textSize="21sp" />

    <EditText
        android:id="@+id/register_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/password_confirm_placeholder"
        android:inputType="textPassword"
        android:nextFocusDown="@+id/register_button"
        android:nextFocusRight="@+id/register_button"
        android:nextFocusForward="@+id/register_button"
        android:textSize="21sp" />

    <Button
            android:id="@+id/register_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textSize="21sp" />

    <Spinner
        android:id="@+id/group_choice_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />


</LinearLayout>