<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.LoginFragment">

    <include layout="@layout/top_bar"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
                android:id="@+id/main_page_training"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/main_page_training"
                android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/main_page_training_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                    android:id="@+id/training_datetime"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/info_frame"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="data godzina" />

            <TextView
                    android:id="@+id/training_location"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/info_frame"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="adres" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/main_page_training_choice"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".fragments.LoginFragment">
            <Space android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"/>
            <ImageButton
                    android:id="@+id/main_page_training_present"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/main_page_imagebutton_present_description"
                    android:src="@drawable/ic_confirm" />

            <ImageButton
                    android:id="@+id/main_page_training_absent"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/main_page_imagebutton_absent_description"
                    android:src="@drawable/ic_deny" />
            <Space android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"/>
        </LinearLayout>

        <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

        <TextView
                android:id="@+id/main_page_match"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/main_page_match"
                android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/main_page_match_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                    android:id="@+id/match_datetime"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/info_frame"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="data godzina" />

            <TextView
                    android:id="@+id/match_location"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/info_frame"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="adres" />

        </LinearLayout>
        <LinearLayout
                android:id="@+id/main_page_match_choice"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".fragments.LoginFragment">
            <Space android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"/>
            <ImageButton
                    android:id="@+id/main_page_match_present"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/main_page_imagebutton_present_description"
                    android:src="@drawable/ic_confirm" />

            <ImageButton
                    android:id="@+id/main_page_match_absent"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/main_page_imagebutton_absent_description"
                    android:src="@drawable/ic_deny" />
            <Space android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"/>
        </LinearLayout>

        <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

        <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context=".fragments.LoginFragment"
            android:baselineAligned="false">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    tools:context=".fragments.LoginFragment">

                <TextView
                        android:id="@+id/main_page_training_players_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/main_page_training_players_title"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                <FrameLayout
                        android:layout_width="56dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp">

                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    tools:context=".fragments.LoginFragment">

                <TextView
                        android:id="@+id/main_page_match_players_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/main_page_match_players_title"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                <FrameLayout
                        android:layout_width="56dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp">
                    <RelativeLayout
                            android:id="@+id/participant_chart"
                            android:layout_width="match_parent" android:layout_height="match_parent">

                        <ImageView
                                android:id="@+id/chart_total"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                android:layout_alignParentBottom="true"
                                android:contentDescription="chart total"
                                app:srcCompat="@drawable/info_frame_black" />

                        <ImageView
                                android:id="@+id/chart_bottom"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:height="100dp"
                                android:layout_alignParentBottom="true"
                                android:contentDescription="chart bottom"
                                app:srcCompat="@drawable/info_frame" />

                        <TextView
                                android:id="@+id/chart_bottom_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:layout_alignParentBottom="true"
                                android:text="12"
                                android:textSize="18sp"
                                android:textColor="@android:color/white"
                                android:visibility="visible" />
                    </RelativeLayout>
                </FrameLayout>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>